# Bad-Apple

./: .gitignore  README.md  bad_apple.py  pyproject.toml  requeriments.txt  start.py  video_data.py
bad_apple/: ascii_video.py  video_data.py
